--- a/oskar/build.gradle
+++ b/oskar/build.gradle
@@ -7,6 +7,7 @@ sourceCompatibility = '1.6'
 
 dependencies {
 	compile 'com.sun.mail:javax.mail:1.4.4'
+	compile 'com.lexicalscope.jewelcli:jewelcli:0.7.6'
 }
 
 sourceSets {
